// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders normal key, numeric value css rule correctly 1`] = `
<style>
  @keyframes animation12 {
  from { opacity:0; }
  50% { opacity:0.5; }
  to { opacity:1; }
  }
</style>
`;

exports[`renders prefixed key, string value css rule correctly 1`] = `
<style>
  @keyframes animation12 {
  from { -webkit-transform:scale(1); }
  to { -webkit-transform:scale(2); }
  }
</style>
`;
